refactor(#41): 채팅방 목록 조회 관련 enum 정리 및 코드 개선